[package]
name = "polycubes"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
format_num = "0.1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
nalgebra = "0.32.3"
ndarray = "0.15.6"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rayon = "1.8.1"
time-humanize = "0.1.3"
