[package]
name = "polycubes"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
format_num = "0.1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
nalgebra = "0.32.4"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.9.0"
time-humanize = "0.1.3"
